--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
