--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
-  "name": "tldraw-llm-example",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "concurrently \"vite\" --kill-others",
-    "dev:win": "concurrently \"vite\" --kill-others",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "deploy": "yarn build && npx partykit deploy"
-  },
-  "dependencies": {
-    "@tldraw/tldraw": "^2.0.0-canary.be93cc0eb6d8",
-    "dotenv": "^16.3.1",
-    "openai": "^4.20.1",
-    "partykit": "^0.0.27",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "concurrently": "^8.2.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  },
-  "packageManager": "yarn@1.22.19"
+	"name": "tldraw-llm-example",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "concurrently \"vite\" --kill-others",
+		"dev:win": "concurrently \"vite\" --kill-others",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"deploy": "yarn build && npx partykit deploy"
+	},
+	"dependencies": {
+		"@tldraw/tldraw": "^2.0.0-canary.be93cc0eb6d8",
+		"dotenv": "^16.3.1",
+		"openai": "^4.20.1",
+		"partykit": "^0.0.27",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.20.1"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"@vitejs/plugin-react": "^4.0.3",
+		"concurrently": "^8.2.0",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"prettier": "^3.1.1",
+		"prettier-plugin-organize-imports": "^3.2.4",
+		"typescript": "^5.0.2",
+		"vite": "^4.4.5"
+	},
+	"packageManager": "yarn@1.22.19"
 }
