--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
 		"dev:win": "concurrently \"vite\" --kill-others",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
-		"deploy": "yarn build && npx partykit deploy"
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"@tldraw/tldraw": "^2.0.0-canary.be93cc0eb6d8",
 		"dotenv": "^16.3.1",
 		"openai": "^4.20.1",
-		"partykit": "^0.0.27",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.20.1"
