--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@tldraw/tldraw": "^2.0.0-canary.be93cc0eb6d8",
+		"classnames": "^2.3.2",
 		"dotenv": "^16.3.1",
 		"openai": "^4.20.1",
 		"react": "^18.2.0",
@@ -24,12 +25,15 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"@vitejs/plugin-react": "^4.0.3",
+		"autoprefixer": "^10.4.16",
 		"concurrently": "^8.2.0",
 		"eslint": "^8.45.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"postcss": "^8.4.32",
 		"prettier": "^3.1.1",
 		"prettier-plugin-organize-imports": "^3.2.4",
+		"tailwindcss": "^3.3.6",
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5"
 	},
