--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@tldraw/tldraw": "^2.0.0-canary.be93cc0eb6d8",
 		"classnames": "^2.3.2",
 		"dotenv": "^16.3.1",
 		"openai": "^4.20.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.20.1"
+		"react-router-dom": "^6.20.1",
+		"tldraw": "^2.2.0-canary.45ac87d39ee5"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
